fix: incorrect alignment buttons

--- a/src/components/Calculator/Controls/Controls.module.scss
+++ b/src/components/Calculator/Controls/Controls.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   row-gap: 16px;
+  justify-items: center;
   padding: 0 10px;
   margin-top: 36px;
 }
